<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/my_pin_details_view">

    <android.support.constraint.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/left_guideline"
        app:layout_constraintGuide_percent="@fraction/poiCreationLeftGuidePercentage"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/right_guideline"
        app:layout_constraintGuide_percent="@fraction/poiCreationRightGuidePercentage"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/top_guideline"
        app:layout_constraintGuide_percent="@fraction/poiCreationTopGuidePercentage"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bottom_guideline"
        app:layout_constraintGuide_percent="@fraction/poiCreationBottomGuidePercentage"
        android:orientation="horizontal"/>

    <RelativeLayout
    	android:id="@+id/my_pin_details_view_container"
        android:layout_centerInParent="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline">
		    
        <!-- Title bar -->
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:id="@+id/my_pin_details_view_header">
            
            <ImageView
                android:id="@+id/my_pin_details_icon"
                android:contentDescription="@string/my_pin_details_icon"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginTop="9dp"
                android:layout_marginLeft="9dp"
                android:src="@drawable/button_create_poi_off" />
            
            <TextView
                android:id="@+id/my_pin_details_view_title"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="8dp"
                android:paddingTop="6dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/gold"
                android:textSize="24sp"
                android:textStyle="bold" />
            
        </LinearLayout>
            
        <!--  Scrolling icontent -->
        
        <ScrollView
            android:id="@+id/my_pin_details_scroll_section"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
            android:background="@color/white"
			android:layout_above="@+id/my_pin_details_view_footer"
			android:layout_below="@+id/my_pin_details_view_header">
            
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                
                <!--  Description  -->
                <TextView
                    android:id="@+id/my_pin_details_view_description_header"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="3dp"
                    android:background="@color/gold"
                    android:text="@string/header_description"/>
                
                <TextView
                    android:id="@+id/my_pin_details_view_description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="3dp"
                    android:textColor="@color/darkgrey"
                    android:textSize="16sp" />
                
                 <!--  Image  -->
                <TextView
                    android:id="@+id/my_pin_details_view_image_header"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="3dp"
                    android:background="@color/gold"
                    android:text="@string/header_image"/>
                
                <ImageView
                    android:id="@+id/my_pin_details_view_image"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/poi_creation_details_image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/image_blank" />
                
            </LinearLayout>
        </ScrollView>
        
        <!--  Bottom bar with close button -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/my_pin_details_view_footer"
        	android:layout_alignParentBottom="true"
        	android:background="@color/gold">
 
         <ImageView
             android:id="@+id/my_pin_details_view_delete_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
    		 android:background="@drawable/button_pressed_colour_change"
             android:src="@drawable/pin_remove_states" />
            
         <ImageView
             android:id="@+id/my_pin_details_view_close_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
    		 android:background="@drawable/button_pressed_colour_change"
		     android:src="@drawable/button_pin_close_states" />
         
         </RelativeLayout>
	        
	</RelativeLayout>
</android.support.constraint.ConstraintLayout>
